gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - "*"
  gateways:
    - "ingress-gateway-istio"
  http:
    - match:
      - uri:
          prefix: "/b"
      route:
        - destination:
            host: nginx-service
            subset: v1
          weight: 50
    - match:
      - uri:
          prefix: "/"
      route:
        - destination:
            host: nginx-service
            subset: v2
          weight: 50
    # - route:
    #   - destination:
    #       host: nginx-service
    #       subset: v1
    #     weight: 50
    #   - destination:
    #       host: nginx-service
    #       subset: v2
    #     weight: 50

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B
